codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_environment_context_includes_two_subagents.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_environment_context_subagents_snapshot(&[\"- agent-1: Atlas\",\n\"- agent-2: Juniper\"])"
---
Scenario: Environment context with subagents

## Window 1
-- request 1 (items) --
00:message/user:
    <ENVIRONMENT_CONTEXT:cwd=<CWD>:subagents=2>
