codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_ephemeral_context.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Turns resend fresh ephemeral editor context while keeping it outside durable turn-state diffs.\",\n&[(\"First Request (With Editor Context)\", &requests[0]),\n(\"Second Request (Refreshed Editor Context)\", &requests[1]),])"
---
Scenario: Turns resend fresh ephemeral editor context while keeping it outside durable turn-state diffs.

## First Request (With Editor Context)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:<additional_context>\n  <title>Context from my editor</title>\n  <content>\n## Active file: src/...
03:message/user:first turn with editor context

## Second Request (Refreshed Editor Context)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:<additional_context>\n  <title>Context from my editor</title>\n  <content>\n## Active file: src/...
03:message/user:first turn with editor context
04:message/assistant:turn one complete
05:message/user:<additional_context>\n  <title>Context from my editor</title>\n  <content>\n## Active file: src/...
06:message/user:second turn with refreshed editor context
