codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_subagents_fragment_includes_one_subagent.snap
---
source: core/tests/suite/model_visible_layout.rs
assertion_line: 481
expression: "format_subagents_fragment_snapshot(&[\"- agent-1: Atlas\"])"
---
00:message/user[2]:
    [01] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
    [02] <SUBAGENTS:count=1>
